# Robotis-OP3-MPC-walking

./: README.md
diag_op3_manager/: CMakeLists.txt  package.xml
diag_op3_manager/config/: dxl_init_OP3.yaml
diag_op3_manager/launch/: diag_op3_gazebo.launch  diag_op3_manager.launch
diag_op3_manager/src/: diag_op3_manager.cpp
mpc_walking_demo/: CMakeLists.txt  package.xml  robotis_op3.urdf
mpc_walking_demo/blasfeo/: Makefile.external_blas
mpc_walking_demo/blasfeo/include/: blasfeo_target.h
mpc_walking_demo/blasfeo/kernel/armv7a/generic/: kernel_ddot_lib.c
mpc_walking_demo/hpipm/doc/: denseQP_guide.aux  denseQP_guide.tex  denseQP_guide.toc  guide.aux  guide.toc
mpc_walking_demo/hpipm/examples/c/: Makefile  example.out  example_d_dense_qp.c
mpc_walking_demo/hpipm/examples/c/data/: getting_started_data.c
mpc_walking_demo/include/: MPCSolver.hpp  QPSolverInterface.cpp  mpc_walking_demo.h  parameters.cpp  types.hpp  utils.cpp
mpc_walking_demo/src/: .mpc_nonconvexkinematicconstraints.cpp.swp  MPCSolver.cpp  mpc_walking_demo.cpp
